# ar-bird-vocalization

./: .gitignore  .gitmodules  README.md  checkpoint.py  clean_cache.sh  config.py  config.yaml  dataset.py  generate.py  judge.py  model.py  pyproject.toml  requirements.txt  snac_inference.py  train.py  vast_setup.sh
analysis/: analyze_dataset.py  compare_codecs.py
audio_datasets/: encodec_dataset.py  snac_dataset.py
birdclef_preprocessing/: gating.py  judge.py  metadata.py  run.py  xcm_enrich.py
docs/: index.html
docs/static/css/: index.css
ecogen/: generate.py  vqvae.py
evaluation/: embeddings.py  evaluate.py  generate_samples.py  metrics.py
experiments/: count.ipynb  eda.ipynb  test.ipynb
finetune/: audiogen_dataset.py  audiogen_model.py  encodec_inference.py  generate.py  train.py
finetuner/: audiogen_finetuner.py  backbone_finetuner.py  gpt2_finetuner.py
generator/: audiogen_generator.py  ecogen_generator.py  llama_generator.py  snac_generator.py
models/: audiogen.py  backbone.py  gpt2.py  lora.py
preprocessing/: __init__.py  code_translator.py  gating.py  judge.py  pipeline.py  relaxed_gating.py  taxonomy.py  tokenize.py  upload_tokens.py
pretrainer/: audiogen_pretrainer.py  backbone_pretrainer.py  gpt2_pretrainer.py
reranker/: reranker.py
subjective_eval/: analyze_responses.py  build_survey.py  prepare_listening_test.py  telegram_survey.py
utils/: __init__.py  audio.py  audio_utils.py  checkpoint.py  classify_audio.py  logging_utils.py  mapping_utils.py
