[project]
name = "ar-bird-vocalization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "audiocraft>=1.1.0",
    "datasets<4.0.0",
    "hydra-core>=1.3.0",
    "huggingface-hub[cli]>=0.36.0",
    "ipykernel>=7.1.0",
    "lightning>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "torch>=2.9.1",
    "torch-audiomentations>=0.11.0",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchmetrics>=1.0.0",
    "torchvision>=0.16.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "boto3>=1.35.0",
    "wandb>=0.16.0",
    "ruff>=0.15.7",
]

[tool.ruff]
exclude = [".venv", "BirdSet/", "Orpheus-TTS/"]